--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,21 @@
     <link rel="stylesheet" href="index.css">
     <title>La mejor app</title>
 </head>
+
 <body>
-    Bienvenido Wacho
-<<<<<<< HEAD
-    hola hola
+    <div>
+        <form action="">
+            <ul>
+                <li>YO AJJA</li>
+                <li>Mateo</li>
+                <li>Joaquìn</li>
+                <li>Jose</li>
+            </ul>
+        </form>
+        <strong>Que onda</strong>
+        <b>Que onda</b>
+    </div>
 
-=======
-
-    Jajajja ACtualice esto
-    
->>>>>>> 85b64725dc423b1bef236c655da856f8111c6560
 </body>
+
 </html>
