--- a/index.html
+++ b/index.html
@@ -10,18 +10,42 @@
 </head>
 
 <body>
-    <div>
-        <form action="">
-            <ul>
-                <li>YO AJJA</li>
-                <li>Mateo</li>
-                <li>Joaquìn</li>
-                <li>Jose</li>
-            </ul>
-        </form>
-        <strong>Que onda</strong>
-        <b>Que onda</b>
-    </div>
+    <header>
+        <h1 class="piola">LOS MEJORES PROGRAMADORES</h1>
+        <nav>
+            <!-- Esto es un comentario Alt + Shift + A -->
+            <a href="./productos.html"> Te llevo a productos</a>
+        </nav>
+    </header>
+    <main>
+        <section id="Inicio">
+            <div>
+                <form action="">
+                    <ul>
+                        <li>YO AJJA</li>
+                        <li>Mateo</li>
+                        <li>Joaquìn</li>
+                        <li>Jose</li>
+                    </ul>
+                </form>
+                <strong>Que onda</strong>
+                <b>Que onda</b>
+            </div>
+        </section>
+        <section id="Desarrollo">
+            <h2>Bienvenido al Desarrollo</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere deserunt reprehenderit deleniti. Perferendis consectetur nisi earum libero ad laudantium voluptatum corrupti distinctio sapiente, a, nostrum id! Facere delectus assumenda iusto.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptates voluptate deserunt inventore odit aperiam esse ullam, ea nulla quia hic totam molestiae eum laudantium facilis vitae deleniti saepe ipsum.
+            </p>
+            <a href="./jajatelacreiste.html" id="sexo" class="elemento-parpadeante">SEXO GRATIS</a>
+        </section>
+        <section id="Productos"></section>
+        <section id="Conclusion">
+
+        </section>
+    </main>
+    <footer></footer>
+
 
 </body>
 
