Esto lo arregle

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-xdxddxdxdxddxdxdx
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,6 +20,7 @@ xdxddxdxdxddxdxdx
     <main>
         <section id="Inicio">
             <div>
+                <p>Que onda</p>
                 <form action="">
                     <ul>
                         <li>YO AJJA</li>
