Uso de carpetas

--- a/src/productos.html
+++ b/src/productos.html
@@ -13,10 +13,9 @@
         <h1>
             Bienvenido a los PRODUCTOSS...!!!
         </h1>
-        a<link rel="stylesheet" href="./index.html"> Esto te lleva a casa papa
         <a href="./index.html"> TE llevo a casaaa</a>
 
-
+        <p>Necesito que esto empiece a funcionar</p>
     </main>
 
 </body>
