--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,6 +31,9 @@
                 </form>
                 <strong>Que onda</strong>
                 <b>Que onda</b>
+                <div>
+                    Que onda
+                </div>
             </div>
         </section>
         <section id="Desarrollo">
