--- a/src/html/index.html
+++ b/src/html/index.html
@@ -38,8 +38,12 @@
         </section>
         <section id="Desarrollo">
             <h2>Bienvenido al Desarrollo</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere deserunt reprehenderit deleniti. Perferendis consectetur nisi earum libero ad laudantium voluptatum corrupti distinctio sapiente, a, nostrum id! Facere delectus assumenda iusto.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptates voluptate deserunt inventore odit aperiam esse ullam, ea nulla quia hic totam molestiae eum laudantium facilis vitae deleniti saepe ipsum.
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere deserunt reprehenderit deleniti.
+                Perferendis consectetur nisi earum libero ad laudantium voluptatum corrupti distinctio sapiente, a,
+                nostrum id! Facere delectus assumenda iusto.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptates voluptate deserunt inventore
+                odit aperiam esse ullam, ea nulla quia hic totam molestiae eum laudantium facilis vitae deleniti saepe
+                ipsum.
             </p>
             <a href="./jajatelacreiste.html" id="sexo" class="elemento-parpadeante">SEXO GRATIS</a>
         </section>
