--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <title>La mejor app</title>
 </head>
 
@@ -14,7 +14,7 @@
         <h1 class="piola">LOS MEJORES PROGRAMADORES</h1>
         <nav>
             <!-- Esto es un comentario Alt + Shift + A -->
-            <a href="./productos.html"> Te llevo a productos</a>
+            <a href="./pages/productos.html"> Te llevo a productos</a>
         </nav>
     </header>
     <main>
@@ -45,7 +45,7 @@
                 odit aperiam esse ullam, ea nulla quia hic totam molestiae eum laudantium facilis vitae deleniti saepe
                 ipsum.
             </p>
-            <a href="./jajatelacreiste.html" id="sexo" class="elemento-parpadeante">SEXO GRATIS</a>
+            <a href="./pages/jajatelacreiste.html" id="sexo" class="elemento-parpadeante">SEXO GRATIS</a>
         </section>
         <section id="Productos"></section>
         <section id="Conclusion">
