--- a/src/html/pages/jajatelacreiste.html
+++ b/src/html/pages/jajatelacreiste.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Pajin sali de aca</h1>
-    <a href="./index.html">Huida</a>
+    <a href="../index.html">Huida</a>
 </body>
 </html>
