Práctica Mateo con Jose

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,13 +19,16 @@
     </header>
     <main>
         <section id="Inicio">
+            <div> 
+                <p>holaa</p>
+            </div>
             <div>
                 <p>Que onda</p>
                 <form action="">
                     <ul>
-                        <li>YO AJJA</li>
-                        <li>Mateo</li>
-                        <li>Joaquìn</li>
+                        <ul>YO AJJA</ul>
+                        <ul>Mateo</ul>
+                        <ol>Joaquìn</ol>
                         <li>Jose</li>
                     </ul>
                 </form>
@@ -38,7 +41,7 @@
         </section>
         <section id="Desarrollo">
             <h2>Bienvenido al Desarrollo</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere deserunt reprehenderit deleniti.
+          <p  >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere deserunt reprehenderit deleniti.
                 Perferendis consectetur nisi earum libero ad laudantium voluptatum corrupti distinctio sapiente, a,
                 nostrum id! Facere delectus assumenda iusto.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptates voluptate deserunt inventore
@@ -50,6 +53,10 @@
         <section id="Productos"></section>
         <section id="Conclusion">
 
+        </section>
+        <section>
+            <a href="./pages/jose.html">Aca</a>
+        
         </section>
     </main>
     <footer></footer>
