--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <section id="Inicio">
-            <div> 
+            <div>
                 <p>holaa</p>
             </div>
             <div>
@@ -40,14 +40,32 @@
             </div>
         </section>
         <section id="Desarrollo">
-            <h2>Bienvenido al Desarrollo</h2>
-          <p  >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere deserunt reprehenderit deleniti.
-                Perferendis consectetur nisi earum libero ad laudantium voluptatum corrupti distinctio sapiente, a,
-                nostrum id! Facere delectus assumenda iusto.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptates voluptate deserunt inventore
-                odit aperiam esse ullam, ea nulla quia hic totam molestiae eum laudantium facilis vitae deleniti saepe
-                ipsum.
-            </p>
+            <div id="flex">
+                <div>
+                    <h2>Bienvenido al Desarrollo</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere deserunt reprehenderit deleniti.
+                        Perferendis consectetur nisi earum libero ad laudantium voluptatum corrupti distinctio sapiente, a,
+                        nostrum id! Facere delectus assumenda iusto.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptates voluptate deserunt
+                        inventore
+                        odit aperiam esse ullam, ea nulla quia hic totam molestiae eum laudantium facilis vitae deleniti
+                        saepe
+                        ipsum.
+                    </p>
+                </div>
+                <div>
+                    <h2>Bienvenido al Desarrollo</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere deserunt reprehenderit deleniti.
+                        Perferendis consectetur nisi earum libero ad laudantium voluptatum corrupti distinctio sapiente, a,
+                        nostrum id! Facere delectus assumenda iusto.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptates voluptate deserunt
+                        inventore
+                        odit aperiam esse ullam, ea nulla quia hic totam molestiae eum laudantium facilis vitae deleniti
+                        saepe
+                        ipsum.
+                    </p>
+                </div>
+            </div>
             <a href="./pages/jajatelacreiste.html" id="sexo" class="elemento-parpadeante">SEXO GRATIS</a>
         </section>
         <section id="Productos"></section>
@@ -56,7 +74,7 @@
         </section>
         <section>
             <a href="./pages/jose.html">Aca</a>
-        
+
         </section>
     </main>
     <footer></footer>
