--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,11 +11,16 @@
 
 <body>
     <header>
+        <div id="nav">
+            <nav>
+                <!-- Esto es un comentario Alt + Shift + A -->
+                <a href="./pages/productos.html"> Te llevo a productos</a>
+                <a href="./pages/productos.html"> Te llevo a QuienSabeDonde</a>
+                <a href="./pages/productos.html"> Te llevo a QuienSabeDonde2</a>
+                <a href="./pages/productos.html"> Te llevo a QuienSabeDonde3</a>
+            </nav>
+        </div>
         <h1 class="piola">LOS MEJORES PROGRAMADORES</h1>
-        <nav>
-            <!-- Esto es un comentario Alt + Shift + A -->
-            <a href="./pages/productos.html"> Te llevo a productos</a>
-        </nav>
     </header>
     <main>
         <section id="Inicio">
