--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,12 +30,15 @@
             <div>
                 <p>Que onda</p>
                 <form action="">
+                    <div id="medio">
                     <ul>
-                        <ul>YO AJJA</ul>
-                        <ul>Mateo</ul>
-                        <ol>Joaquìn</ol>
+                        <li>YO AJJA</li>
+                        <li>Mateo</li>
+                        <li>Joaquìn</li>
                         <li>Jose</li>
-                    </ul>
+                    </ul>    
+                    </div>
+                    
                 </form>
                 <strong>Que onda</strong>
                 <b>Que onda</b>
